Procesamiento de TransactionAdded para OneTimeExpense
Creado servicio para asociar transacciones y gastos, y servicio para actualizar gastos en función de transacciones. Campo postedDate de ExpensePayment renombrado a date en concordancia con Plaid. Paquete event-listeners renombrado a event-subscribers. Añadido modelo, consumidor, comando y use case para el evento TransactionAdded. Añadidos repositorios, adaptadores y métodos para ExpensePayment y Expense.
